--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -286,7 +286,9 @@
         FocusedBorderThickness: =1
         Height: =88
         Icon: =Icon.Home
-        OnSelect: =Navigate(Tela_Inicial_app,ScreenTransition.None)
+        OnSelect: |-
+            =Select(Icon2);
+            Navigate(Tela_Inicial_app,ScreenTransition.None)
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
