--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8263,20 +8263,7 @@
         Fill: =RGBA(0, 16, 96, 1)
         Height: =23
         Icon: =Icon.Reload
-        OnSelect: |-
-            =Refresh([@LancamentoProducao]) ; Refresh([@LancamentoPerdas]);
-            
-            ClearCollect(Listaproducao,Filter(LancamentoProducao,IDEspelho >= 1));
-            UpdateContext({maiorIdEspelho: Max(Listaproducao,IDEspelho)});
-            UpdateContext({IdEspelhoatual: 0});
-            
-            Select(btn_collprod_1);
-            
-            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas >= 1));
-            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
-            UpdateContext({IdEspelhoatualPerdas: 0});
-            
-            Select(btn_collperd_1)
+        OnSelect: =Refresh([@LancamentoProducao]) ; Refresh([@LancamentoPerdas])
         PaddingBottom: =2
         PaddingLeft: =2
         PaddingRight: =2
